# todo-ai-fullstack-hackathon

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  chat.py  deps.py  tasks.py
backend/src/core/: config.py  database.py  mcp_tools.py  security.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/schemas/: chat.py  task.py  user.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contract.py  test_tasks_contract.py
backend/tests/integration/: test_auth.py  test_tasks.py
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ChatInterface.tsx  FloatingChat.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/hooks/: useAuth.ts  useTasks.ts
frontend/src/lib/: api.ts  chat-api.ts  types.ts
history/prompts/001-fullstack-web-app/: 001-create-phase-ii-fullstack-web-app-spec.spec.prompt.md  002-create-phase-ii-implementation-plan.plan.prompt.md  003-generate-phase-ii-task-breakdown.tasks.prompt.md  004-implement-phase-ii-mvp.green.prompt.md
specs/001-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fullstack-web-app/checklists/: requirements.md
specs/002-ai-chatbot-mcp/: plan.md  spec.md  tasks.md
(+6 files in other folders)
